kubernetes/szilardshome/temp/traefik2/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-internal-class
spec:
  controllerName: traefik.io/gateway-controller-internal
