kubernetes/szilardshome/temp/traefik2/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  namespace: traefik 
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
      hostname: "*.szilardshome.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      protocol: HTTPS
      port: 8443
      hostname: "*.szilardshome.com"
      allowedRoutes:
        namespaces:
          from: All
      # tls:
      #   # mode: Terminate
      #   certificateRefs:
      #     - kind: Secret
      #       name: external-tls-secret
      #       # group: ""
  addresses:
    - type: IPAddress
      value: 10.10.4.71
